@@ -29,6 +29,8 @@ import jakarta.ws.rs.ApplicationPath;
 
 import jakarta.inject.Inject;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * The resource configuration for the Athena web applications.
  */
@@ -57,10 +59,10 @@ public class ResourceConfig extends org.glassfish.jersey.server.ResourceConfig {
      * @throws IllegalAccessException if there was a problem accessing something due to security restrictions
      */
     @Inject
-    public ResourceConfig() throws ClassNotFoundException, InstantiationException, IllegalAccessException {
+    public ResourceConfig() throws ClassNotFoundException, InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
         final Class<? extends BinderFactory> binderClass = Class.forName(getBindingFactory())
                 .asSubclass(BinderFactory.class);
-        final BinderFactory binderFactory = binderClass.newInstance();
+        final BinderFactory binderFactory = binderClass.getDeclaredConstructor().newInstance();
         final Binder binder = binderFactory.buildBinder();
 
         packages(ATHENA_ENDPOINT_PACKAGE);
